styles.css
/* ... */
.one h2, .one h3{
    font-weight: 500;
}

.link{
    margin-top: 1rem;
    display: flex;
    align-items: center;
    gap: 2rem;
}

.link a{
    color: #7aa7e9;
    text-transform: uppercase;
    font-size: .9rem;
    font-weight: 500;
    display: flex;
    align-items: center;
    gap: .3rem;
    padding-bottom: .3rem;
    border-bottom: 2px solid;
}

.link a i{
    font-size: 1.3rem;
}

@media(max-width:1024px) {

    .projects{
        padding: 10px 30px;
    }
    .workText h1{
        font-size: 21px;
    }
    
    .workText>p{
        font-size: 15px;
    }
    .one h2{
        font-size: 18px;
    }
    .one h3{
        font-size: 17px;
    }
    .one p{
        font-size: 15px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }

}
@media(max-width:800px) {
    .feature{
        width: 50%;
    }
    .feature h1{
        font-size: 2rem;
    }
    
    .feature p{
        font-size: .7rem;
    }
    .workText h1{
        font-size: 19px;
    }
    
    .workText>p{
        font-size: 13px;
    }
    .one h2{
        font-size: 15px;
    }
    .one h3{
        font-size: 14px;
    }
    .one p{
        font-size: 14px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }
    .workImg{
        background-color: #222222;
        border-radius: 10px;
        display: flex;
        justify-content: center;
    }
    
    .workImg img{
        padding: 40px 0px;
        width: 90%;
        height: 18rem;
        border-radius: 10px;
    }

}
@media(max-width:500px) {
    .feature{
        width: 100%;
        text-align: center;
    }
    .feature h1{
        font-size: 2rem;
    }
    .feature p{
        font-size: .7rem;
    }
    .work{
        flex-direction: column;
    }
    .workText{
        width: 100%;
    }
    .workText h1{
        font-size: 19px;
    }
    
    .workText>p{
        font-size: 13px;
    }
    .one h2{
        font-size: 15px;
    }
    .one h3{
        font-size: 14px;
    }
    .one p{
        font-size: 14px;
    }
    .link a{
        font-size: 13px;
    }
    .link a i{
        font-size: 15px;
    }
    .workImg{
        background-color: #222222;
        border-radius: 10px;
        display: flex;
        justify-content: center;
    }
    
    .workImg img{
        padding: 0px 0px;
        width: 100%;
        height: 11rem;
        border-radius: 10px;
    }

}

#about{
    border-bottom: 1px solid;
}

.about{
    display: flex;
    align-items: start;
    margin-top: 4rem;
    margin-bottom: 4rem;
    justify-content: space-between;
}

.about>h1{
    font-family: "Bebas Neue", serif;
    font-weight: 500;
    width: 40%;
    font-size: 5rem;
}

.story{
    font-family: "Manrope", serif;
    width: 50%;
    padding-top: 1rem;
}

.story h2{
    font-weight: 400;
}

.story p{
    margin-block: 2rem;
}

.story a{
    color: #7aa7e9;
    text-transform: uppercase;
    font-size: .9rem;
    font-weight: 500;
    padding-bottom: .1rem;
    border-bottom: 2px solid;
}

.aboutImg{
    display: none;
}

@media (max-width:1024px) {
    .about{
        padding: 10px 30px;
    }
    .about>h1{
        font-size: 60px;
    }
    .story h2{
        font-size: 24px;
    }
    .story p{
        font-size: 16px;
    }
    .story a{
        font-size: 14px;
    }
}
@media (max-width:800px) {
    .about>h1{
        font-size: 50px;
    }
    .story h2{
        font-size: 22px;
    }
    .story p{
        font-size: 15px;
    }
    .story a{
        font-size: 13px;
    }
}
@media (max-width:500px) {
    .about{
        flex-direction: column;
    }
    .about>h1{
        font-size: 40px;
        width: 100%;
    }
    .story{
        width: 100%;
    }
    .story h2{
        font-size: 16px;
    }
    .story p{
        font-size: 13px;
    }
    .story a{
        font-size: 12px;
    }
    .aboutImg{
        display: block;
        width: 100%;
        margin-top: 2rem;
    }
    .aboutImg img{
        height: 50%;
        width: 100%;
        border-radius: 10px;
    }
}

.contact{
    display: flex;
    font-family: "Manrope", serif;
    margin-block: 4rem;
    align-items: start;
    justify-content: space-between;
}
.contactText{
    width: 50%;
}

.contactText h2{
    font-family: "Bebas Neue", serif;
    font-weight: 500;
    font-size: 4rem;
    text-transform: uppercase;
}

.contactText p{
    font-size: .9rem;
    font-size: 300;
}

.contactText a {
    color: white;
}

.soc ul{
    margin-top: 1rem;
    display: flex;
    gap: 1rem;
}

.soc ul li a{
    font-size: 1.6rem;
    color: #7aa7e9;
}

.form{
    width: 50%;
    text-transform: capitalize;
}


.input{
    display: flex;
    flex-direction: column;
    padding: 9px 0px;
}
.input label{
    font-size: 1rem;
    font-weight: 500;
    margin-bottom: .2rem;
}

.input input{
    background-color: #222222;
    padding: 10px 20px;
    width: 100%;
    height: 30px;
    color: white;
    border: none;
    outline: none;
    font-size: 18px;
}

textarea{
    background-color: #222222;
    padding: 10px 20px;
    color: white;
    width: 100%;
    border: none;
    outline: none;
    height: 100px;
    font-size: 16px;
}

form>button{
    margin-top: 1rem;
    font-family: "Manrope", serif;
    font-weight: 500;
    background-color: #7aa7e9;
    height: 2.5rem;
    width: 7rem;
    border: none;
    border-radius: 20px;
    text-transform: uppercase;
    cursor: pointer;
}

footer{
    margin-top: -5rem;
    margin-bottom: 2rem;
    font-family: "Manrope", serif;
    font-size: .8rem;
}
/* ... */

